# escher

./: .gitignore  Cargo.toml  LICENSE  README.md  SConstruct
crates/escher-hierarchy/: Cargo.toml  README.md
crates/escher-hierarchy/src/: lib.rs  main.rs  x.rs
crates/escher-schedule/: Cargo.toml
crates/escher-schedule/src/: lib.rs  main.rs  schedule.rs  util.rs
crates/escher-schedule/src/schedule/: callback.rs  channel.rs  multi_callback.rs
src/: EscherApp.c  EscherApp.h  SConscript  assets.rs  clip.rs  egui.wgsl  lib.rs  main.cpp  main.rs  ui.rs  util.rs  wgpustate.rs
src/GUI/: MainWindow.c  MainWindow.h
src/GUI/GResource/: MainWindow.ui  SConscript  escher.gresource.xml
src/ui/: dialogs.rs  error.rs  escher_ui.rs  event.rs  main.rs  simple.rs  util.rs
src/video/: Cargo.toml  build.rs  wrapper_videoc.h
src/video/libvideoc/: .gitignore  CMakeLists.txt  videoc.pc.in
src/video/libvideoc/include/: DecodingDecision.h  VideoStream.h  renderframe.h  videoc.h
src/video/libvideoc/src/: debug_main.c  debug_videostream.c  priv_renderframe.h  priv_videoc.h  renderframe.c  videoc.c
src/video/libvideoc/src/Types/: DecodingDecision.c  VideoStream.c  priv_DecodingDecision.h
src/video/src/: buffer.rs  ffi.rs  lib.rs  main.rs
src/video/src/ffi/: rc.rs  video_stream.rs  video_stream_builder.rs
src/wgpustate/: texture_atlas.rs  util.rs
