[package]
name = "escher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "*"
# egui-wgpu = "*"
egui-winit = "*"
# egui = "*"
# winit = "*"
wgpu = "*"
epaint = {version="*", features = ["bytemuck"]}
pollster = "*"
env_logger = "*"
either = "*"

image = "*"
escher_video = { path = "src/video", version = "*" }

# [build-dependencies]
# bindgen = "*"

