[package]
name = "escher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "*"
egui-winit = "*"
wgpu = "*"
epaint = {version="*", features = ["bytemuck"]}
pollster = "*"
env_logger = "*"

image = "*"
escher_video = { path = "src/video", version = "*" }
escher-hierarchy = { path = "crates/escher-hierarchy", version = "*" }

